# Web-Threat-Detection

./: .gitignore  config.yaml  main.py  pyproject.toml  requirements.txt  versions.py
api/: genai_app.py
api/templates/: index.html
artifacts/: ann_mlp_model.pkl  scaler.pkl
inference/: predictor.py
notebook/: EDA.ipynb
src/: train_ann.py
